force-app/main/default/objects/Ticket_Divisions__mdt/Ticket_Divisions__mdt.object-meta.xml
<CustomObject>
    <label>Ticket Division</label>
    <pluralLabel>Ticket Divisions</pluralLabel>
</CustomObject>