force-app/main/default/objects/Ticket_Divisions__mdt/fields/Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Label__c</fullName>
    <label>Record Type Label</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 (FCP/FSP)</fullName>
                <default>true</default>
                <label>Tier 1 (FCP/FSP)</label>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Depositions</fullName>
            </value>
            <value>
                <fullName>Investigations</fullName>
            </value>
            <value>
                <fullName>eDiscovery</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Court and Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>