force-app/main/default/objects/Ticket_Divisions__mdt/fields/Supported_Objects__c.field-meta.xml
<CustomField>
    <fullName>Supported_Objects__c</fullName>
    <label>Supported Objects</label>
    <length>200</length>
    <type>Text</type>
</CustomField>