force-app/main/default/objects/Ticket_Divisions__mdt/listViews/Ticket_Divisions_View.listView-meta.xml
<ListView>
    <fullName>Ticket_Divisions_View</fullName>
    <columns>Record_Type_Label__c</columns>
    <columns>Record_Type_API_Name__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Supported_Objects__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ticket Divisions View</label>
</ListView>